<resources>
	<string name="app_name">eXplorun</string>

	<!-- Map activity -->
	<string name="title_activity_maps">Map</string>
	<string name="your_position">Your position</string>
    <string name="start_form">Search for a route</string>
	<string name="route_info_text">Route info</string>
	<string name="no_gps">Localisation is disabled</string>
	<string name="loc_request">Please enable location setting to use this application</string>
	<string name="no_network">An internet connection is required to use this application</string>
	<string name="cancel">Cancel</string>


	<!-- Navigation Drawer -->
	<string name="drawer_title">Menu</string>
	<string name="drawer_open">Open the menu</string>
	<string name="drawer_close">Close the menu</string>
	<string name="nav_map">Map</string>
	<string name="nav_history">History</string>
	<string name="nav_nearby_attractions">Nearby tourist attractions</string>
	<string name="nav_about">About</string>
	<string name="nav_logout">Logout</string>
	<string name="drawer_locked_error">Drawer is disabled during the route</string>

	<!-- Errors -->
	<string name="network_error">Network error</string>
	<string name="http_error">Error with the request, please try again later</string>
	<string name="api_request_error">An error occurred with the request, some elements might be missing</string>
	<string name="directions_api_request_error">An error occurred with the request, the route can\'t be displayed on the map</string>
	<string name="no_nearby_attraction">There are no tourist attractions nearby</string>
	<string name="no_route_found">No route of this duration has been found</string>
	<string name="login_error_text">Login error</string>
	<string name="authentication_failed">Authentication failed</string>

	<!-- Nearby tourist attractions -->
	<string name="distance_in_km" translatable="false">%1$.1f km</string>
	<string name="distance_in_m" translatable="false">%1$.0f m</string>
	<string name="no_photo">No photo found for this attraction</string>
	<string name="notification_title" translatable="false">eXplorun</string>
	<string name="notification_message">Background location service</string>
	<string name="ticker_text">Background location</string>

	<!-- Form fragment -->
	<string name="form_validate_button">Validate</string>
	<string name="form_cancel_button">Cancel</string>
	<string name="form_walk_radio">Walking</string>
	<string name="form_run_radio">Running</string>
    <string name="form_trail_radio" translatable="false">Trail</string>
    <string name="form_duration_text">Duration : %1$s - %2$s</string>
    <string name="form_min_text" translatable="false">%1$d min</string>
    <string name="form_h_text" translatable="false">%1$d H</string>
	<string name="form_h_min_text" translatable="false">%1$d H %2$02d min</string>

	<!-- Route info fragment -->
	<string name="start_route_text">Start</string>
	<string name="distance_image_text">Distance</string>
	<string name="duration_image_text">Duration</string>
	<string name="arrival_time_image_text">Estimated time of arrival</string>
	<string name="drawer_locked">Navigation drawer is locked during the route</string>

	<!-- Current route fragment -->
	<string name="pause_route_text">Pause</string>
	<string name="stop_route_text">Stop</string>
	<string name="resume_route_text">Resume</string>
	<string name="save_route_text">Save route</string>
	<string name="average_speed_text">Average speed</string>
	<string name="average_speed" translatable="false">%1$.1f km/h</string>
	<string name="route_saved">Your route has been saved in your history</string>
	<string name="save_route_error">An internet connection is required to save your route</string>

	<!-- Login fragment -->
	<string name="title_activity_login">Login</string>
	<string name="login_successful">Login successful!</string>
	<string name="logout_successful">Logout successful!</string>

	<!-- History fragment -->
	<string name="history_error">An error occurred while retrieving your history</string>
	<string name="duration_text" translatable="false">%1$d:%2$02d:%3$02d</string>
	<string name="view_route_on_map_error">An internet connection is required to view your route on map</string>
	<string name="delete">Delete</string>
	<string name="no_route">You do not have any route in your history</string>

	<!-- Settings fragment -->
	<string name="walk_speed">"Walk speed : "</string>
	<string name="run_speed">"Run speed : "</string>
	<string name="trail_speed">"Trail speed : "</string>
	<string name="sport_speeds">Average speed in each sport</string>
	<string name="nav_settings">Settings</string>
</resources>
