<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context="brice.explorun.fragments.FormFragment"
	android:id="@+id/form"
	android:visibility="gone">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/white"
		android:orientation="vertical">

		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_margin="10dp">

			<RadioButton
				android:id="@+id/fragment_form_walk_radio"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/form_walk_radio"/>

			<RadioButton
				android:id="@+id/fragment_form_run_radio"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/form_run_radio"/>

			<RadioButton
					android:id="@+id/fragment_form_trail_radio"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/form_trail_radio"/>

		</RadioGroup>

		<TextView
			android:id="@+id/fragment_form_duration_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/form_duration_text"
			android:layout_marginTop="10dp"
			android:layout_marginStart="10dp"
			android:layout_marginLeft="10dp"/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:weightSum="4"
				android:orientation="horizontal"
				android:gravity="center">

			<com.appyvet.materialrangebar.RangeBar
					android:id="@+id/fragment_form_duration_range_bar"
					android:layout_width="0dp"
					android:layout_height="72dp"
					android:layout_weight="3"
					app:mrb_selectorBoundaryColor="@color/colorAccent"
					app:mrb_tickStart="10"
					app:mrb_tickEnd="180"
					app:mrb_tickInterval="10"
					app:mrb_selectorSize="10dp"
					app:mrb_pinTextColor="@color/colorAccent"
					app:mrb_pinColor="@color/colorPrimaryDark"
					app:mrb_pinMaxFont="10sp"
					app:mrb_connectingLineColor="@color/colorPrimary"
					app:mrb_selectorColor="@color/colorPrimaryDark"/>

		</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
			android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
				android:gravity="center">

                <Button
                    android:id="@+id/fragment_form_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/lightGrey"
                    android:gravity="center"
                    android:shadowRadius="3"
                    android:text="@string/form_cancel_button" />
            </LinearLayout>

			<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:gravity="center">

				<Button
						android:id="@+id/fragment_form_validate_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_margin="10dp"
						android:background="@color/lightGrey"
						android:shadowRadius="3"
						android:text="@string/form_validate_button"/>

			</LinearLayout>

        </LinearLayout>

	</LinearLayout>

</ScrollView>