<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="brice.explorun.fragments.CurrentRouteFragment"
	android:id="@+id/current_route_fragment"
	android:visibility="gone">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@android:color/white">

		<Chronometer
			android:id="@+id/duration"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="40sp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAppearance="?android:textAppearanceSmall"
			android:text="@string/duration_image_text"/>

		<LinearLayout
			android:layout_width="match_parent"
		  	android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="10dp"
			android:baselineAligned="false">

			<LinearLayout
				android:layout_width="0dp"
			  	android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center">

				<ImageView
					android:layout_width="wrap_content"
				   	android:layout_height="wrap_content"
					android:paddingRight="5dp"
					android:paddingEnd="5dp"
					android:paddingStart="0dp"
					android:paddingLeft="0dp"
					android:src="@drawable/ic_distance"
					android:contentDescription="@string/distance_image_text"/>

				<TextView
					android:id="@+id/distance_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:textAppearanceMedium"
					android:padding="5dp"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:orientation="horizontal"
					android:gravity="center">

				<ImageView
						android:id="@+id/average_speed_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:paddingRight="5dp"
						android:paddingEnd="5dp"
						android:paddingStart="0dp"
						android:paddingLeft="0dp"
						android:contentDescription="@string/average_speed_text"/>

				<TextView
						android:id="@+id/average_speed"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:textAppearanceMedium"
						android:padding="5dp"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
		  	android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="10dp"
			style="?android:attr/buttonBarStyle">

			<Button
				android:id="@+id/btn_pause_route"
				android:layout_width="0dp"
				android:layout_height="35sp"
				android:layout_weight="1"
				android:gravity="center"
				android:background="@android:color/holo_orange_light"
				android:textColor="@android:color/white"
				android:text="@string/pause_route_text"
				android:textSize="18sp"
				style="?android:attr/buttonBarButtonStyle"/>

			<Button
				android:id="@+id/btn_stop_route"
				android:layout_width="0dp"
				android:layout_height="35sp"
				android:layout_weight="1"
				android:gravity="center"
				android:background="@android:color/holo_red_light"
				android:textColor="@android:color/white"
				android:text="@string/stop_route_text"
				android:textSize="18sp"
				style="?android:attr/buttonBarButtonStyle"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>