<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="brice.explorun.fragments.RouteInfoFragment"
	android:id="@+id/info_fragment"
	android:visibility="gone">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@android:color/white"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
		  	android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:baselineAligned="false"
			android:paddingTop="10dp">

			<LinearLayout
				android:layout_width="0dp"
			  	android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingLeft="15dp"
				android:paddingStart="15dp">

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="25dp"
						android:layout_marginEnd="5dp"
						android:layout_marginRight="5dp"
						android:contentDescription="@string/distance_image_text"
						android:src="@drawable/ic_distance"/>

				<TextView
						android:id="@+id/distance_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:textAppearanceMedium"/>

			</LinearLayout>

			<LinearLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:paddingLeft="20dp"
					android:paddingStart="20dp">

				<ImageView
						android:id="@+id/sport_type_image"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="5dp"
						android:layout_marginRight="5dp"/>

				<TextView
						android:id="@+id/sport_type_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:textAppearanceMedium"/>

			</LinearLayout>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:baselineAligned="false"
			android:paddingTop="20dp"
			android:paddingBottom="20dp">

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingLeft="15dp"
				android:paddingStart="15dp">

				<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginEnd="5dp"
						android:layout_marginRight="5dp"
						android:contentDescription="@string/duration_image_text"
						android:src="@drawable/ic_time"/>

				<TextView
					android:id="@+id/duration_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:textAppearanceMedium"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:paddingLeft="20dp"
				android:paddingStart="20dp">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="5dp"
					android:layout_marginEnd="5dp"
					android:src="@drawable/ic_flag"
					android:contentDescription="@string/arrival_time_image_text"/>

				<TextView
					android:id="@+id/arrival_time_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:textAppearanceMedium"/>

			</LinearLayout>

		</LinearLayout>

		<Button
			android:id="@+id/btn_start_route"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:background="@color/colorAccent"
			android:textColor="@color/colorPrimary"
			android:text="@string/start_route_text"
			android:textSize="18sp"/>

	</LinearLayout>

</ScrollView>